test/kubernetes/e2e/features/headless_svc/inputs/k8s_api.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: headless-httproute
spec:
  parentRefs:
    - name: gw
  hostnames:
    - "headless.example.com"
  rules:
    - backendRefs:
        - name: headless-example-svc
          port: 8080
---
kind: Gateway
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: gw
spec:
  gatewayClassName: gloo-gateway
  listeners:
    - protocol: HTTP
      port: 80
      name: http
      allowedRoutes:
        namespaces:
          from: Same
